구조, 내용 많이많이 변경~

--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
 
                                     <li><a href="#section-one" title="Overview">소개</a></li>
 
-              <!--                      <li><a href="#section-two" title="Features">설명</a></li> -->
-
-                                    <li><a href="#section-four" title="Team">팀</a></li>
-                                    <li><a href="#section-five" title="Team">연혁</a></li>
+                                    <li><a href="#section-two" title="Team">팀</a></li>
+                                    <!-- <li><a href="#section-three" title="Product">제품</a></li> -->
+                                    <li><a href="#section-four" title="Team">연혁</a></li>
+                                    <!-- <li><a href="#section-five" title="Team">연혁</a></li> -->
+                                    <!-- <li><a href="#section-six" title="Team">연혁</a></li> -->
                                     <li><a href="https://blog.aply.biz" target="_new" title="BLOG">블로그</a></li>
 
                   <!--                  <li><a href="#section-five" title="Contact">Contact</a></li>
@@ -190,64 +191,30 @@
 
                     <article>
 
-                    	<p>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다<br/>
+                    	<h4><font color=#ffffff>APLY는 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</font></h4>
 
                     </article>
 
-
-
-                    <!-- four boxes  -->
-
-                    	<div class="row four-box-pan" role="four-box">
-
-                            <section class="col-xs-12 col-sm-6 col-md-6">
-
-                            	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
-
-                            	<h5>드론 기술</h5>
-
-                                <p>빅데이터, 인공지능 그리고 드론기술을 이용해서<br>농업활동에 도움이 되는 서비스를 개발합니다</p>
-
-                            </section>
-
-                            <section class="col-xs-12 col-sm-6 col-md-6">
-
-                            	<figure><i class="fa fa-magic" aria-hidden="true"></i></figure>
-
-                            	<h5>감성소통 기술</h5>
-
-                                <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다</p>
-
-                            </section>
-<!--
-                            <section class="col-xs-12 col-sm-6 col-md-3">
-
-                            	<figure><i class="fa fa-paper-plane" aria-hidden="true"></i></figure>
-
-                            	<h5>Simplified workflow</h5>
-
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
-
-                            </section>
-
-                            <section class="col-xs-12 col-sm-6 col-md-3">
-
-                            	<figure><i class="fa fa-television" aria-hidden="true"></i></figure>
-
-                            	<h5>Cross platform</h5>
-
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.</p>
-
-                            </section>
--->
-
-
-                        </div>
-
-                    <!-- four boxes -->
-
-
-
+                    <div class="row four-box-pan gtco-services" role="four-box">
+                        <div class="col-md-4 col-sm-4 service-wrap">
+              						<div class="service animate-fast">
+              						<h3><i class="fa fa-paper-plane"></i> 드론 기술</h3>
+              						<p>드론기술을 이용해서<br>각종 활동에 도움이 되는 서비스를 개발합니다</p>
+              						</div>
+              					</div>
+              					<div class="col-md-4 col-sm-4 service-wrap">
+              						<div class="service animate-fas">
+              						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
+              						<p>아주 감성적이며 재미있는 소통기술을 연구하고 개발합니다</p>
+              						</div>
+              					</div>
+                        <div class="col-md-4 col-sm-4 service-wrap">
+              						<div class="service">
+              						<h3><i class="fa fa-calculator"></i> 빅데이터/인공지능 기술</h3>
+              						<p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>
+              						</div>
+              					</div>
+                    </div>
                 </div>
 
             </section>
@@ -256,81 +223,94 @@
             <section class="section-two" id="section-two">
 
               <div class="container">
-                  <br><br><br><br><br><br>
-                  <header role="title-page" class="text-center">
-                      <h4>다양한 분야에 특화된 팀원들이 있습니다</h4>
-                      <h5>- 인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀<h5>
-                      <h5>- 국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀</h5>
-                      <h5>- 철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀</h5>
-                  </header>
-                  <br><br><br><br><br><br>
-                  <header role="title-page" class="text-center">
-                      <h4>기대보다 더 나은 가치를 제공합니다</h4>
-                      <h5>- 이왕 무언가를 할거면 의미있고 재미있게<h5>
-                      <h5>- 효율보다는 효과를</h5>
-                      <h5>- 더 나은 가치와 사회적 기여를 생각하며 일을 즐깁니다</h5>
-                  </header>
-                  <br><br><br><br><br><br>
+                  <div class="row four-box-pan gtco-services" role="four-box">
+                      <div class="col-md-4 col-sm-4 service-wrap">
+                        <div class="service">
+                        <h3><i class="fa fa-paperclip"></i> 다양한 분야에 특화된 팀원들이 있습니다</h3>
+                        <p>- 인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀</p>
+                        <p>- 국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀</p>
+                        <p>- 철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀</p>
+                        </div>
+                      </div>
+                      <div class="col-md-4 col-sm-4 service-wrap">
+                        <div class="service animate-fast">
+                        <h3><i class="fa fa-paperclip"></i> 재미있게 일 합니다</h3>
+                        <p>- 좀 더 자랑스럽게 드러낼 수 있고</p>
+                        <p>- 더 많은 의미를 담을 수 있으며</p>
+                        <p>- 재미있게 일 하고자 노력합니다</p>
+                        </div>
+                      </div>
+                      <div class="col-md-4 col-sm-4 service-wrap">
+                        <div class="service">
+                        <h3><i class="fa fa-paperclip"></i> 기대보다 더 나은 가치를 제공합니다</h3>
+                        <p>- 이왕 무언가를 할거면 의미있고 재미있게</p>
+                        <p>- 효율보다는 효과를</p>
+                        <p>- 더 나은 가치와 사회적 기여를 생각하며 일을 즐깁니다</p>
+                        </div>
+                      </div>
+                  </div>
               </div>
-
             </section>
-
-
-                <!-- image-content -->
-
-                <div class="clearfix"></div>
-
-                 <!-- image-content -->
-
-                <div class="video-pan text-center">
-
-                	<a id="video" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=sJzWA27HdtM',containment:'.bg-container-youtube', showControls:false,autoPlay:false, loop:true, startAt:0, opacity:1, addRaster:false, quality:'large'}"></a>
-
-                    <!-- 5.0 background container autoPlay:true,  -->
-
-                    <div class="bg-container-youtube"></div>
-
-                	<header><a class="popup-vimeo video-button" href="https://www.youtube.com/watch?v=sJzWA27HdtM"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
-
-                    <h4>제품 영상('두근두근' 프로토타입)</h4><br><br>
-                    <font color=#fff>두근두근 사이트</font> <a href="http://dkdk.io"><font color=#77aaff>가보기</font></a>
-                  </header>
-
-                </div>
-
-                <!-- video -->
-
-
-
-            </section>
-
-            <!-- section-two -->
-
-            <!-- section-three -->
-
-            <!-- section-four -->
 
             <section class="section-four" id="section-four">
-
             	<div class="container">
+                <header role="title-page" class="text-center">
+                    <h4><font color=#ffffff>연혁</font></h4>
+                      <font color=#ffffff>
+                        <p>2018-12 기술보증기금 자금유치</p>
+                        <p>2018-09 법인설립</p>
+                        <p>2018-08 K-Startup 기술혁신형 창업기업 지원사업 선정</p>
+                      </font>
 
-                    <header role="title-page" class="text-center">
+                </header>
+            </section>
 
-                        <h4>APLY 팀을 만나보세요</h4>
+            <section class="section-five" id="section-five">
+              <div class="container">
+                  <div class="gtco-services" role="four-box">
+                    <div class="row row-pb-sm">
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service animate-fast">
+                          <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱</h3>
+                          <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service">
+                          <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 서비스</h3>
+                            <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service">
+                          <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
+                          <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
+                          <p><font color=#6770b0>온라인눈싸움 (눈팅)</font> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
+                          </div>
+                        </div>
+                        <div class="clearfix visible-md-block visible-sm-block"></div>
+                    </div>
+                    <div class="row row-pb-sm">
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service animate-fast">
+                            <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
+                            <p>청년농부 - 이호승님 (홍천)</p>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service">
 
-                        <h5>보다 즐겁고, 재미있게 일하는 진보된 플랫폼<br/>APLY 팀원들의 이야기를 페이스북에서 만나보세요</h5>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 service-wrap">
+                          <div class="service">
 
-                        <section role="socil-icons" class="socil-icons">
-
-	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                    	</section>
-
-		<br><br><br>
-		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
-                    </header>
-
-		</div>                    <!-- Team -->
+                          </div>
+                        </div>
+                        <div class="clearfix visible-md-block visible-sm-block"></div>
+                    </div>
+                  </div>
+              </div>
 
             </section>
 
@@ -339,19 +319,27 @@
 
 
             <!-- section-five -->
-            <section class="section-four" id="section-five">
+            <section class="section-six" id="section-six">
 
               <div class="container">
 
                     <header role="title-page" class="text-center">
 
-                        <h4>연혁</h4>
-                        <h5>2018-12 기술보증기금 자금유치<h5>
-                        <h5>2018-09 법인설립</h5>
-                        <h5>2018-08 K-Startup 기술혁신형 창업기업 지원사업 선정</h5>
-                    </header>
+                        <h4>APLY 팀을 만나보세요</h4>
 
-            </div>                    <!-- Team -->
+                        <h5><font color=#333333>보다 즐겁고, 재미있게 일하는 진보된 플랫폼<br/>APLY 팀원들의 이야기를 페이스북에서 만나보세요</h5>
+
+                        <section role="socil-icons" class="socil-icons">
+
+	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+
+                    	   </section>
+
+            		<br><br><br>
+            		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
+                                </header>
+
+              </div>                    <!-- Team -->
 
             </section>
 
@@ -367,22 +355,8 @@
 
          	<div class="container">
 
-                	<!-- socil-icons -->
 
-
-
-                    <!-- socil-icons -->
-
-                    <!-- nav -->
-
-                    <nav role="footer-nav">
-
-
-                    </nav>
-
-                    <!-- nav -->
-
-                    <p class="copy">&copy; 2019 <a href=mailto:contactus@aply.biz>APLY Inc.</a> All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+                    <p class="copy">&copy; 2019 <a href=mailto:contactus@aply.biz>APLY Inc.</a> Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
 
                 </div>
 
@@ -399,8 +373,6 @@
 
 	<script src="js/jquery.min.js" type="text/javascript"></script>
 
-
-
 	<script src="js/parallax.min.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
@@ -413,17 +385,7 @@
 
 	<script src="js/owl.carousel.js" type="text/javascript"></script>
 
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-
-	<script src="js/maps.js" type="text/javascript"></script>
-
-	<script type="text/javascript" src="js/jquery.mb.YTPlayer.js"></script>
-
-	<script type="text/javascript" src="js/video.js"></script>
-
 	<script src="js/custom.js" type="text/javascript"></script>
-
-	<script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
 
 	<script src="js/jquery.contact.js" type="text/javascript"></script>
 
