--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                           <div class="service">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
                           <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
-                          <p><font color=#6770b0>온라인눈싸움 (눈팅)</font> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
+                          <p><a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
                         <div class="clearfix visible-md-block visible-sm-block"></div>
@@ -294,7 +294,10 @@
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service animate-fast">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
-                            <p>청년농부 - 이호승님 (홍천)</p>
+                            <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
+                            <p>- <a href="#" target=new>티아이피 특허법률 사무소</a></p>
+                            <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승님 (홍천)</a></p>
+                            <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
