--- a/index.html
+++ b/index.html
@@ -199,18 +199,21 @@
                         <div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service animate-fast">
               						<h3><i class="fa fa-paper-plane"></i> 드론 기술</h3>
-              						<p>드론기술을 이용해서<br>각종 활동에 도움이 되는 서비스를 개발합니다</p>
+                          <p><img src="./images/cat_drone.png" width="280px"></p>
+              						<p>드론 기술을 활용하여 각종 활동에 도움이 되는 서비스를 개발합니다</p>
               						</div>
               					</div>
               					<div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service animate-fas">
               						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
+                          <p><img src="./images/cat_emotion.png" width="280px"></p>
               						<p>아주 감성적이며 재미있는 소통기술을 연구하고 개발합니다</p>
               						</div>
               					</div>
                         <div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service">
               						<h3><i class="fa fa-calculator"></i> 빅데이터/인공지능 기술</h3>
+                          <p><img src="./images/cat_data.png" width="280px"></p>
               						<p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>
               						</div>
               					</div>
