마지막 카테고리 정리

--- a/index.html
+++ b/index.html
@@ -274,14 +274,9 @@
                     <div class="row row-pb-sm">
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service animate-fast">
-                          <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱</h3>
+                          <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
-                          </div>
-                        </div>
-                        <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service">
-                          <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 서비스</h3>
-                            <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
+                          <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
@@ -291,9 +286,6 @@
                           <p><a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
-                        <div class="clearfix visible-md-block visible-sm-block"></div>
-                    </div>
-                    <div class="row row-pb-sm">
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service animate-fast">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
@@ -303,18 +295,9 @@
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
                           </div>
                         </div>
-                        <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service">
-
-                          </div>
-                        </div>
-                        <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service">
-
-                          </div>
-                        </div>
                         <div class="clearfix visible-md-block visible-sm-block"></div>
                     </div>
+                    
                   </div>
               </div>
 
