--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                             <p>- <a href="#" target=new>티아이피 특허법률 사무소</a></p>
                             <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승님 (홍천)</a></p>
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
+                            <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
                           </div>
                         </div>
                         <div class="clearfix visible-md-block visible-sm-block"></div>
