드로미 서비스 설명 추가

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                           <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
                           <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
+                          <p><a href="#">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
