--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
 
                     <div class="row four-box-pan gtco-services" role="four-box">
                         <div class="col-md-4 col-sm-4 service-wrap">
-              						<div class="service animate-fast">
+              						<div class="service">
               						<h3><i class="fa fa-paper-plane"></i> 드론 기술</h3>
                           <p><img src="./images/cat_drone.png" width="280px"></p>
               						<p>드론 기술을 활용하여 각종 활동에 도움이 되는 서비스를 개발합니다</p>
               						</div>
               					</div>
               					<div class="col-md-4 col-sm-4 service-wrap">
-              						<div class="service animate-fas">
+              						<div class="service animate-change changed animate-fast">
               						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
                           <p><img src="./images/cat_emotion.png" width="280px"></p>
               						<p>아주 감성적이며 재미있는 소통기술을 연구하고 개발합니다</p>
@@ -236,14 +236,14 @@
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service">
+                          <div class="service animate-change changed animate-fast">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
                           <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
                           <p><a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service animate-fast">
+                          <div class="service">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
                             <p>- <a href="#" target=new>티아이피 특허법률 사무소</a></p>
@@ -275,7 +275,7 @@
                         </div>
                       </div>
                       <div class="col-md-4 col-sm-4 service-wrap">
-                        <div class="service animate-fast">
+                        <div class="service animate-change changed animate-fast">
                         <h3><i class="fa fa-paperclip"></i> 재미있게 일 합니다</h3>
                         <p>- 좀 더 자랑스럽게 드러낼 수 있고</p>
                         <p>- 더 많은 의미를 담을 수 있으며</p>
@@ -322,12 +322,13 @@
                         <h4>APLY 팀을 만나보세요</h4>
 
                         <h5><font color=#333333>보다 즐겁고, 재미있게 일하는 진보된 플랫폼<br/>APLY 팀원들의 이야기를 페이스북에서 만나보세요</h5>
+                        <br>
 
                         <section role="socil-icons" class="socil-icons">
 
 	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
-                    	   </section>
+                    	  </section>
 
             		<br><br><br>
             		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
