티아이피 주소 수정

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                           <div class="service">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
-                            <p>- <a href="#" target=new>티아이피 특허법률 사무소</a></p>
+                            <p>- <a href="http://티아이피.com" target=new>티아이피 특허법률 사무소</a></p>
                             <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승님 (홍천)</a></p>
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
                             <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
