소개 내용 수정

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                           <div class="service animate-fast">
                           <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
+                          <p><img src=./images/dkdk.png width="279px"></p>
                           <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
                           <p><a href="#">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
                           </div>
@@ -216,7 +217,10 @@
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service animate-change changed animate-fast">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
+                          <p><img src=./images/droneplay_logo.png></p>
                           <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
+
+                          <p><img src=./images/noonting.png></p>
                           <p><a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
@@ -224,10 +228,18 @@
                           <div class="service">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
+
+
                             <p>- <a href="http://티아이피.com" target=new>티아이피 특허법률 사무소</a></p>
-                            <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승님 (홍천)</a></p>
+
+
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
+
+
                             <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
+                            
+
+                            <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승님 (홍천)</a></p>
                           </div>
                         </div>
                         <div class="clearfix visible-md-block visible-sm-block"></div>
