강원도립대 파트너 추가, 커뮤니티에서 이미지 빼기...

--- a/index.html
+++ b/index.html
@@ -177,22 +177,22 @@
                         <div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service">
               						<h3><i class="fa fa-paper-plane"></i> 드론 기술</h3>
+                          <p>드론 기술을 활용하여 각종 활동에 도움이 되는 서비스를 개발합니다</p>
                           <p><img src="./images/cat_drone.png" width="280px"></p>
-              						<p>드론 기술을 활용하여 각종 활동에 도움이 되는 서비스를 개발합니다</p>
               						</div>
               					</div>
               					<div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service animate-change changed animate-fast">
               						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
+                          <p>아주 감성적이며 재미있는 소통기술을 연구하고 개발합니다</p>
                           <p><img src="./images/cat_emotion.png" width="280px"></p>
-              						<p>아주 감성적이며 재미있는 소통기술을 연구하고 개발합니다</p>
               						</div>
               					</div>
                         <div class="col-md-4 col-sm-4 service-wrap">
               						<div class="service">
               						<h3><i class="fa fa-calculator"></i> 빅데이터/인공지능 기술</h3>
+                          <p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>
                           <p><img src="./images/cat_data.png" width="280px"></p>
-              						<p>데이터를 이해하고, 가치를 발굴하고, 인사이트를 얻고, 인공지능까지 디자인 합니다</p>
               						</div>
               					</div>
                     </div>
@@ -209,18 +209,30 @@
                           <div class="service animate-fast">
                           <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
-                          <p><img src=./images/dkdk.png width="279px"></p>
+                          <p>
+                            <a href="https://top.dkdk.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
+                            <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="fa fa-facebook"></i></a>
+                          </p>
+                          <p><br></p>
                           <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
+                          <p>
+                            <a href="https://drdr.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
+                            <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="fa fa-facebook"></i></a>
+
+                          </p>
+                          <p><br></p>
                           <p><a href="#">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service animate-change changed animate-fast">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
-                          <p><img src=./images/droneplay_logo.png></p>
                           <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
-
-                          <p><img src=./images/noonting.png></p>
+                          <p>
+                            <a href="https://top.droneplay.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
+                            <a href="https://www.facebook.com/groups/droneplay/" target="new"><i class="fa fa-facebook"></i></a>
+                          </p>
+                          <p><br></p>
                           <p><a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
@@ -229,19 +241,18 @@
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
 
-
                             <p>- <a href="http://티아이피.com" target=new>티아이피 특허법률 사무소</a></p>
-
 
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
 
-
                             <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
+                            <p>- <a href="http://koworc.kr" target=new>강원도립대학교</a></p>
 
                             <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승 (홍천)</a></p>
 
                             <p>- <a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
+
                           </div>
                         </div>
                         <div class="clearfix visible-md-block visible-sm-block"></div>
@@ -313,12 +324,13 @@
 
                         <h4>APLY 팀을 만나보세요</h4>
 
-                        <h5><font color=#333333>보다 즐겁고, 재미있게 일하는 진보된 플랫폼<br/>APLY 팀원들의 이야기를 페이스북에서 만나보세요</h5>
+                        <h5><font color=#333333>보다 즐겁고, 재미있게 일하는 진보된 플랫폼<br/>APLY 팀원들의 이야기를 페이스북과 인스타그램에서 만나보세요</h5>
                         <br>
 
                         <section role="socil-icons" class="socil-icons">
 
-	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+	                        <a href="https://www.facebook.com/APLYPLATFORM"><i class="fa fa-facebook" aria-hidden="true"></i></a>&nbsp;&nbsp;
+                          <a href="https://www.instagram.com/aplyplatform"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 
                     	  </section>
 
