페이스북 페이지 플러그인 추가

--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
 
                     	  </section>
 
+                        <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
+
             		<br><br><br>
             		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                                 </header>
