좋아요 위치 변경

--- a/index.html
+++ b/index.html
@@ -333,12 +333,10 @@
                           <a href="https://www.instagram.com/aplyplatform"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 
                     	  </section>
-
+                        <br>
                         <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
 
-            		<br><br><br>
-            		<div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
-                                </header>
+                    </header>
 
               </div>                    <!-- Team -->
 
@@ -356,7 +354,7 @@
 
          	<div class="container">
 
-
+                    <div class="fb-like" data-href="https://facebook.com/aplyplatform" data-width="300" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div><br>
                     <p class="copy">&copy; 2019 <a href=mailto:contactus@aply.biz>APLY Inc.</a> Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
 
                 </div>
