--- a/index.html
+++ b/index.html
@@ -334,8 +334,12 @@
 
                     	  </section>
                         <br>
-                        <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
-
+                        <div class="col-md-4 col-sm-4">
+                            <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
+                        </div>
+                        <div class="col-md-4 col-sm-4">
+                            <iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
+                        </div>
                     </header>
 
               </div>                    <!-- Team -->
