--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
                             <p>- <a href="http://티아이피.com" target=new>티아이피 특허법률 사무소</a></p>
 
-                            <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
+                            <p>- <a href="http://appsosystem.com" target=new>(주)앱소</a></p>
 
                             <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
