http -> https로 수정

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Aply - Advanced Platform to fLY</title>
     <meta property="og:title" content="APLY - Advanced platform to fly"/>
-    <meta property="og:image" content="http://aply.biz/images/aply_fb.jpg"/>
-    <meta property="og:url" content="http://aply.biz"/>
+    <meta property="og:image" content="https://www.aply.biz/images/aply_fb.jpg"/>
+    <meta property="og:url" content="https://www.aply.biz"/>
     <meta property="og:site_name" content="APLY"/>
     <meta property="og:description" content="We will fly high"/>
 
