링크 위치 수정

--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                           <div class="service animate-fast">
                           <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p><a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
-                          <p>
+                          <p class="pull-center">
                             <a href="https://top.dkdk.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
                             <a href="https://www.facebook.com/dkdkheart/" target="new"><i class="fa fa-facebook"></i></a>
                           </p>
                           <p><br></p>
                           <p><a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
-                          <p>
+                          <p class="pull-center">
                             <a href="https://drdr.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
                             <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="fa fa-facebook"></i></a>
 
@@ -228,7 +228,7 @@
                           <div class="service animate-change changed animate-fast">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
                           <p><a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
-                          <p>
+                          <p class="pull-center">
                             <a href="https://top.droneplay.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
                             <a href="https://www.facebook.com/groups/droneplay/" target="new"><i class="fa fa-facebook"></i></a>
                           </p>
