--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
 
-                            <p>- <a href="http://티아이피.com" target=new>티아이피 특허법률 사무소</a></p>
+                            <p>- <a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
 
                             <p>- <a href="http://appsosystem.com" target=new>앱소 시스템</a></p>
 
