--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                         <!-- logo -->
 
-                        <div class="col-xs-5 col-sm-2 col-md-2 col-lg-2">
+                        <div class="col-xs-5 col-sm-2 col-md-2 col-lg-2 logostyle">
 
                             <h1>
 
