눈팅 링크 연결

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <a href="https://www.facebook.com/groups/droneplay/" target="new"><i class="fa fa-facebook"></i></a>
                           </p>
                           <p><br></p>
-                          <p>- <a href="#" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
+                          <p>- <a href="https://www.facebook.com/noonting2019" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
