--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
                           </p>
                           <p><br></p>
                           <p>- <a href="https://www.facebook.com/noonting2019" target="new">온라인눈싸움 (눈팅)</a> : 온라인으로 눈싸움을 하는 게임 제작 모임</p>
+                          <p style="text-align:center">
+                            <a href="https://www.facebook.com/noonting2019" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
+                            <a href="https://www.facebook.com/noonting2019" target="new"><i class="fa fa-facebook"></i></a>
+                          </p>
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
