파트너 추가

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                         <div class="col-md-4 col-sm-4 service-wrap">
                           <div class="service">
                             <h3><i class="fa fa-paperclip"></i> APLY의 파트너</h3>
+
                             <p>- <a href="http://www.creativehongsee.com/" target=new>크리에이티브 홍시</a></p>
 
                             <p>- <a href="https://blog.naver.com/essong1225" target=new>티아이피 특허법률 사무소</a></p>
@@ -251,11 +252,17 @@
 
                             <p>- <a href="http://koworc.kr" target=new>한국창의여성연구협동조합</a></p>
 
+                            <p>- <a href="https://www.mss.go.kr" target=new>중소벤처기업부</a></p>
+
+                            <p>- <a href="https://www.kibo.or.kr:444/" target=new>기술보증기금</a></p>
+
                             <p>- <a href="http://koworc.kr" target=new>강원도립대학교</a></p>
 
                             <p>- <a href="https://m.blog.naver.com/PostList.nhn?blogId=107whos" target=new>청년농부 이호승 (홍천)</a></p>
 
                             <p>- <a href="https://www.instagram.com/fl_ember" target=new>청년농부 김현승 (파주)</a></p>
+
+                            <p>- <a href="http://cpworks.co.kr" target=new>체리픽웍스</a></p>
 
                           </div>
                         </div>
