--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
                                 <ul class="nav navbar-nav">
                                     <li class="active"><a href="#headere-top" title="Home">홈</a></li>
                                     <li><a href="#section-one" title="Overview">소개</a></li>
-                                    <li><a href="#section-four" title="Team">연혁</a></li>
+                                    <li><a href="#section-four" title="History">연혁</a></li>
                                     <li><a href="#section-two" title="Team">팀</a></li>
                                     <li><a href="https://blog.aply.biz" target="_new" title="BLOG">블로그</a></li>
+                                    <li><a href="#section-seven" title="Location">찾아오시는길</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -346,7 +347,7 @@
                         <br>
                         <div class="row">
                               <div class="col-lg-6">
-                                <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
+                                <div class="fb-page" data-href="https://www.facebook.com/aplyplatform" data-tabs="timeline" data-height="580" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/aplyplatform" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/aplyplatform">APLY</a></blockquote></div>
                                 <br><br>
                               </div>
                               <div class="col-lg-6">
@@ -358,12 +359,26 @@
               </div>                    <!-- Team -->
 
             </section>
-
             <!-- section-six -->
 
-            <!-- section-six -->
+            <!-- section-seven -->
+            <section class="section-seven" id="section-seven">
 
+              <div class="container">
+                    <header role="title-page">
+		    <font color="#ffffff">
+		    <h4 style="text-align:center"><font color="#fff">찾아오시는 길</font></h4>
+		    <h5><i class="fa fa-location-arrow" aria-hidden="true"></i> 서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
+		    <i class="fa fa-phone" aria-hidden="true"></i> 02-6956-0801 / 
+		    <i class="fa fa-fax" aria-hidden="true"></i> 02-6954-1019<br>
+		    <i class="fa fa-mail-reply" aria-hidden="true"></i> contactus@aply.biz</h5>
+		    </font>
 
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+		    </head>
+	      </div>
+
+	    </section>
 
            <!-- footer -->
 
