마케팅팀 설명 추가

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                         <p>- 인공지능/빅데이터/드론/해상 통신기술등을 두루 경험한 기술팀</p>
                         <p>- 국가인재 관리, 통계분석, 과학기술 정책 연구 경험이 풍부한 기획팀</p>
                         <p>- 철학과 이야기가 있는 사용자경험, 디자인을 꾸밀줄 아는 디자인팀</p>
+                        <p>- 정확하게 고객을 찾고 감동시킬 줄 아는 마케팅 팀</p>
                         </div>
                       </div>
                       <div class="col-md-4 col-sm-4 service-wrap">
