animation 효과 추가

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               						</div>
               					</div>
               					<div class="col-md-4 col-sm-4 service-wrap">
-              						<div class="service animate-change changed animate-fast">
+              						<div class="service animate-change">
               						<h3><i class="fa fa-magic"></i> 감성소통 기술</h3>
                           <p>아주 감성적이며 재미있는 소통 기술을 연구하고 개발합니다</p>
                           <p><img src="./images/cat_emotion.png" width="280px"></p>
@@ -207,7 +207,7 @@
                   <div class="gtco-services" role="four-box">
                     <div class="row row-pb-sm">
                         <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service animate-fast">
+                          <div class="service">
                           <h3><i class="fa fa-paperclip"></i> APLY가 개발중인 앱과 서비스</h3>
                           <p>- <a href="https://top.dkdk.io" target="new">두근두근</a> : 온라인상의 친구에게 심박패턴을 전달하는 감성앱</p>
                           <p>
@@ -226,7 +226,7 @@
                           </div>
                         </div>
                         <div class="col-md-4 col-sm-4 service-wrap">
-                          <div class="service animate-change changed animate-fast">
+                          <div class="service animate-change">
                           <h3><i class="fa fa-paperclip"></i>  APLY가 후원하는 커뮤니티</h3>
                           <p>- <a href="https://top.droneplay.io/" target="new">DronePlay</a> : 드론을 세계일주 시키기위한 모임</p>
                           <p>
@@ -306,7 +306,7 @@
                         </div>
                       </div>
                       <div class="col-md-4 col-sm-4 service-wrap">
-                        <div class="service animate-change changed animate-fast">
+                        <div class="service animate-change">
                         <h3><i class="fa fa-paperclip"></i> 재미있게 일 합니다</h3>
                         <p>- 좀 더 자랑스럽게 드러낼 수 있고</p>
                         <p>- 더 많은 의미를 담을 수 있으며</p>
@@ -366,18 +366,19 @@
             <section class="section-seven" id="section-seven">
 
               <div class="container">
-                    <header role="title-page">
-		    <font color="#ffffff">
-		    <h4 style="text-align:center"><font color="#fff">찾아오시는 길</font></h4>
-		    <h5><i class="fa fa-location-arrow" aria-hidden="true"></i> 서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
-		    <i class="fa fa-phone" aria-hidden="true"></i> 02-6956-0801 / 
-		    <i class="fa fa-fax" aria-hidden="true"></i> 02-6954-1019<br>
-		    <i class="fa fa-mail-reply" aria-hidden="true"></i> contactus@aply.biz</h5>
-		    </font>
+                    <head role="title-page">
+                		    <font color="#ffffff">
+                		    <h4 style="text-align:center"><font color="#fff">찾아오시는 길</font></h4>
+                		    <h5><i class="fa fa-location-arrow" aria-hidden="true"></i> 서울특별시 강남구 강남대로 364, 패스트파이브(역삼동, 미왕빌딩) , 17층 / 06241<br>
+                		    <i class="fa fa-phone" aria-hidden="true"></i> 02-6956-0801 /
+                		    <i class="fa fa-fax" aria-hidden="true"></i> 02-6954-1019<br>
+                		    <i class="fa fa-mail-reply" aria-hidden="true"></i> contactus@aply.biz</h5>
+                		    </font>
 
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
-		    </head>
-	      </div>
+                			       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3165.5249044228185!2d127.0271385!3d37.4955363!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1509dfe20ab%3A0xe52bb39be1ff4ba5!2z7Yyo7Iqk7Yq47YyM7J2067iMIOqwleuCqCAy7Zi47KCQ!5e0!3m2!1sko!2skr!4v1550571205107" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        
+                    </head>
+      	      </div>
 
 	    </section>
 
@@ -420,6 +421,7 @@
 	<script src="js/custom.js" type="text/javascript"></script>
 
 	<script src="js/jquery.contact.js" type="text/javascript"></script>
+  <script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
 
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
