--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                           <p>- <a href="https://drdr.io" target="new">두런두런</a> : 논/밭의 이야기를 담는 감성 브랜딩 서비스</p>
                           <p>
                             <a href="https://drdr.io" target="new"><i class="fa fa-external-link"></i></a>&nbsp;&nbsp;
-                            <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="fa fa-facebook"></i></a>
-
+                            <a href="https://www.facebook.com/두런두런-334464897347449" target="new"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;
+                            <a href="https://www.instagram.com/drdr_aply/" target="new"><i class="fa fa-instagram"></i></a>
                           </p>
                           <p><br></p>
                           <p>- <a href="#">드로미</a> : 드론, 센서박스 등을 활용하여 논/밭의 작황/병충해 상태를 모니터링 하는 서비스</p>
